--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "nodemon server.js"
   },
   "engines": {
-    "node": "v20.11.0"
+    "node": "20.11.x"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +21,7 @@
     "cors": "^2.8.5",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "module_name": "^1.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.0",
